--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
 
     <title><%=title%></title>
 </head>
@@ -49,7 +50,7 @@
 
     <div class="starter-template">
         <h1>Bootstrap starter template</h1>
-        <p class="lead"><%=body%></p>
+        <p class="lead"><%-body%></p>
     </div>
 
 </main>
