--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -46,13 +46,8 @@
     </div>
 </nav>
 
-<main role="main" class="container">
-
-    <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead"><%-body%></p>
-    </div>
-
+<main role="main" class="container bd-content">
+    <%-body%>
 </main>
 
 
