--- a/src/views/_message.ejs
+++ b/src/views/_message.ejs
@@ -1,13 +1,18 @@
+<%if(typeof opPost === 'undefined') {
+    opPost=false;
+}%>
 <div class="postContainer">
-    <div id="p-message.getId()" class="post reply">
+    <div id="p-message.getId()" class="post <%=opPost?'op':'reply'%> <%=message.pending?'pending':''%>">
         <div class="postInfo desktop" id="pi172999365">
-            <span class="nameBlock">
-                <span class="name">Anonymous</span>
+            <% if(message.pending) { %>
+            <span class="postInfo">
+                <span class="pending">Pending</span>
             </span>
-            <span class="dateTime"><%=message.date%></span>
+            <% } %>
+            <span class="dateTime"><%=message.getFormattedDate()%></span>
             <span class="postNum">
-                <a href="<%if(link=='thread'){%>/thread/<%=message.getId()/<% } else {%>#p-<%=message.getId()%>">
-                    <%=message.getId()%>
+                <a href="<%if(link=='thread'){%>/thread/<%=message.getId()%>/<% } else {%>#p-<%=message.getId()%><%}%>">
+                    <%=message.getIdShort()%>
                 </a>
             </span>
         </div>
