--- a/src/views/thread.ejs
+++ b/src/views/thread.ejs
@@ -1,4 +1,4 @@
-include('_message', {message: message, link: 'thread'})
+<%- include('_message', {message: thread, link: 'thread', opPost:true}) %>
 <% replies.forEach(function(message){ %>
 <%- include('_message', {message: message, link: 'reply'}) %>
 <% }); %>
