--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -20,29 +20,22 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item <%=page==='main'?'active':''%>">
                 <a class="nav-link" href="/">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/favorites">Favorites</a>
+            <li class="nav-item <%=page==='places'?'active':''%>">
+                <a class="nav-link" href="/places">Places</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/settings">Settings</a>
+            <li class="my-1 my-md-0 my-lg-0">
+                <a class="btn btn-outline-success my-0 mx-md-2" href="/post">New thread</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+            <li class="my-1 my-md-0 my-lg-0">
+                <a href="/load" class="btn btn-outline-info my-0 mx-md-2">Load messages</a>
+            </li>
+            <li class="my-1 my-md-0 my-lg-0">
+                <a href="/container" class="btn btn-outline-primary my-0 mx-md-2">Create container</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 
