--- a/src/views/thread.ejs
+++ b/src/views/thread.ejs
@@ -3,5 +3,5 @@
 <%- include('_message', {message: message, link: 'reply'}) %>
 <% }); %>
 <hr />
-<h2>Reply</h2>
+<h2 id="reply">Reply</h2>
 <%- include('_replyForm', {form: form}) %>
