--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -2,51 +2,36 @@ body > .container {
     padding: 60px 15px 0;
 }
 
-div.op {
-    margin-bottom: 10px;
-}
-div.post {
-    margin: 4px 0;
-    overflow: hidden;
-}
-div.post.pending {
-    border: 1px dashed #333;
-    background-color: #ccc;
-}
-div.reply {
-    background-color: #d6daf0;
-    border: 1px solid #b7c5d9;
-    border-top-width: 1px;
-    border-left-width: 1px;
-    border-top-style: solid;
-    border-left-style: solid;
-    border-top-color: rgb(183, 197, 217);
-    border-left-color: rgb(183, 197, 217);
-    border-left: 0;
-    border-top: 0;
-    display: table;
-    padding: 2px;
-}
-div.post div.postInfo {
-    display: block;
-    width: 100%;
-}
-div.post div.postInfo span.nameBlock span.name {
-    color: #117743;
-    font-weight: bold;
-}
-div.post blockquote.postMessage {
-    display: block;
-}
-
-div.postInfo .pending {
-    color: #cc8844;
-}
-
 .flex-center{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+a {
+    color: #333333;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #000000;
+    text-decoration: underline;
+}
+
+.bg-secondary a{
+    color: #ccc;
+}
+
+.bg-secondary a:hover{
+    color: #eee;
+}
+
+.bg-secondary {
+    color: #eeeeee;
+}
+
+img.container {
+    max-width: 100%;
 }
