--- a/src/views/_message.ejs
+++ b/src/views/_message.ejs
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <div class="card-body">\
+    <div class="card-body">
         <%-htmlDisplay(message.message)%>
     </div>
     <div class="card-footer">
