--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -33,7 +33,7 @@
                 <a class="btn btn-outline-success my-0 mx-md-2" href="/post">New thread</a>
             </li>
             <li class="my-1 my-md-0 my-lg-0">
-                <a href="/load" class="btn btn-outline-info my-0 mx-md-2">Load messages</a>
+                <a href="/update" class="btn btn-outline-info my-0 mx-md-2">Load messages</a>
             </li>
             <li class="my-1 my-md-0 my-lg-0">
                 <a href="/container" class="btn btn-outline-primary my-0 mx-md-2">Create container</a>
